syntax = "proto3";
package tools.simrail.backend;

option java_multiple_files = false;
option java_outer_classname = "CacheProto";
option java_package = "tools.simrail.backend.common.proto";

import "event_bus.proto";

message ExtendedServerData {
  string id = 1;
  string foreign_id = 2;
  ServerData server_data = 3;
}

message ExtendedJourneyData {
  string id = 1;
  string foreign_run_id = 2;
  string server_id = 3;
  JourneyData journey_data = 4;
}

message ExtendedDispatchPostData {
  string id = 1;
  string foreign_id = 2;
  DispatchPostData dispatch_post_data = 3;
}

message JourneyChecksumData {
  uint64 timestamp = 1;
  string foreign_run_id = 2;
  string checksum = 3;
}
